attempt to fix double scroll bars

--- a/css/mindCrypt.css
+++ b/css/mindCrypt.css
@@ -121,6 +121,16 @@ table {
 	margin-top: 10%;
 }
 
+.modal {
+	overflow: auto;
+}
+
+body {
+	overflow: auto;
+}
+
 .chart {
 	padding-bottom: 2em; 
 }
+
+
